<resources>
    <string name="app_name">Simple Note</string>
    <string name="by_author">By\n Andrew Ershov</string>
    <string name="notes_app">Notes App</string>
    <string name="phrase_app">Life is too Fast don\'t forget anything\n just Note it!</string>
    <string name="title">Title...</string>
    <string name="subtitle">SubTitle</string>
    <string name="notes">Notes</string>
    <string name="priority">Priority</string>
    <string name="date">22 Oct 2021</string>
    <string name="are_want_delete_item">Are you sure want to delete\n this Note?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="no_filter">No Filter</string>
    <string name="high_to_low">High to low</string>
    <string name="low_to_high">Low to high</string>
    <string name="search">Search</string>
    <string name="add_note">Add note</string>
    <string name="edit_note">Edit note</string>
    <string name="ok">Ok</string>
    <string name="null_title_or_note">You can\'t leave title or note empty.</string>
</resources>