<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:id="@+id/deleteBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <View
            android:layout_width="100dp"
            android:layout_height="7dp"
            android:layout_margin="10dp"
            android:background="@drawable/detele_indictor_shape"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/are_want_delete_item"
            android:gravity="center"
            android:fontFamily="@font/product_sans_regular"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/delete_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:gravity="center"
            android:textSize="18sp"
            android:padding="7dp"
            android:background="@drawable/no_delete"
            android:textColor="@color/black"
            android:fontFamily="@font/product_sans_regular"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"/>

        <TextView
            android:id="@+id/delete_yes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:gravity="center"
            android:textSize="18sp"
            android:padding="7dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/yes_delete"
            android:textColor="@color/white"
            android:fontFamily="@font/product_sans_regular"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

    </LinearLayout>

</layout>