<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>


    <RelativeLayout
        android:id="@+id/insertMainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightGrey"
        android:orientation="vertical"
        tools:context="com.notes.Activity.InsertNotesActivity">

        <LinearLayout
            android:id="@+id/layoutHeader"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/red"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/addImageBack"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/app_name"
                android:padding="4dp"
                android:src="@drawable/ic_back_arrow"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/addNoteTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:fontFamily="@font/product_sans_regular"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:text="@string/add_note"
                android:textColor="@color/white"
                android:textSize="20sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/inputLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutHeader"
            android:orientation="vertical">

            <EditText
                android:id="@+id/notesTitle"
                style="@style/InsertItemMargin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:fontFamily="@font/product_sans_regular"
                android:hint="@string/title"
                android:maxLines="3"
                android:padding="15dp" />


            <LinearLayout
                android:id="@+id/notesPriority"
                style="@style/InsertItemMargin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/priorityText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:fontFamily="@font/product_sans_regular"
                    android:text="@string/priority"
                    android:textColor="@color/black" />

                <ImageView
                    android:id="@+id/redPriority"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/red_shape"
                    android:src="@drawable/ic_done" />

                <ImageView
                    android:id="@+id/yellowPriority"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/yellow_shape" />

                <ImageView
                    android:id="@+id/greenPriority"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/green_shape" />

            </LinearLayout>

            <EditText
                android:id="@+id/notesData"
                style="@style/InsertItemMargin"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@drawable/edit_text_background"
                android:fontFamily="@font/product_sans_regular"
                android:gravity="start"
                android:hint="@string/notes"
                android:padding="15dp" />
 

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/doneNotesButton"
                android:layout_width="60dp"
                android:layout_height="55dp"
                android:layout_gravity="end"
                android:layout_marginStart="26dp"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="26dp"
                android:layout_marginBottom="26dp"
                android:backgroundTint="@color/red"
                android:src="@drawable/ic_done"
                app:tint="@color/white" />


        </LinearLayout>

    </RelativeLayout>

</layout>