<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/splashScreenMainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.notes.Activity.SplashScreen">
'

        <ImageView
            android:id="@+id/imageNotes"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:background="@drawable/notes"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.45" />

        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notes_app"
            android:textColor="@color/red"
            android:textSize="32dp"
            android:fontFamily="@font/product_sans_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageNotes"/>

        <TextView
            android:id="@+id/phraseApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phrase_app"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appName"
            android:textColor="@color/red"
            android:gravity="center"
            android:fontFamily="@font/product_sans_regular"
            android:layout_marginTop="10dp"/>

        <ProgressBar
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:id="@+id/mainProgressBar"
            android:indeterminateTint="@color/red"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phraseApp"
            app:layout_constraintBottom_toTopOf="@id/authorName"/>

        <TextView
            android:id="@+id/authorName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="@color/red"
            android:text="@string/by_author"
            android:fontFamily="@font/product_sans_regular"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>